# ark-db

./: .gitignore  .mailmap  CHANGELOG.md  README.md  errors.txt  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  svelte.config.js  vercel.json  vite.config.js
.github/workflows/: update-data.yml  update-msv.yml
scripts/: certshops.json  en_scraper.py  errors.txt  event_shops.py  farming.py  items.py  msv.json  msv.py  operators.py  perma_shops.json  perma_shops.py  pyproject.toml  requirements.txt  shop_data.json  shops.json  shops.py  utils.py
src/: app.html
src/lib/components/: AppBar.svelte  ErrorScreen.svelte  FarmingStage.svelte  HeadTags.svelte  Header.svelte  ItemIcon.svelte  Navbar.svelte  NumberInput.svelte  OperatorIcon.svelte  RegionSelect.svelte  SearchBar.svelte  ShopItems.svelte  Sidebar.svelte  TaskItem.svelte  Toggle.svelte  UpgradeSelect.svelte  UpgradeSeries.svelte
src/lib/components/screens/: ErrorScreen.svelte
src/lib/data/: event_shops.json  farming.json  items.json  operators.json  perma_shops.json  shops.json
src/routes/: +error.svelte  +layout.svelte  +page.svelte  __error.svelte  __layout.svelte  farming.svelte  index.svelte  planner.svelte  stores.js  test.svelte  utils.js
src/routes/api/: +server.js
src/routes/api/items/: +server.js
src/routes/api/operators/: +server.js
src/routes/api/operators/cost/: +server.js
src/routes/api/operators/name/: +server.js
src/routes/farming/: +page.svelte  index.svelte
src/routes/planner/: +layout.svelte  +page.svelte  __layout-planner.svelte  cost@planner.svelte  index@planner.svelte  tally@planner.svelte
src/routes/planner/cost/: +page.svelte
src/routes/shops/: +page.svelte
static/: app.css  site.webmanifest
