[tool.poetry]
name = "ark-db"
version = "0.14.6"
description = "Updates ark-db data"
authors = ["astral4 <88992929+astral4@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.2"
pandas = "^1.4.4"
Pillow = "^9.2.0"
requests = "^2.28.1"
scipy = "^1.9.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
html5lib = "^1.1"
selenium = "^4.5.0"
webdriver-manager = "^3.8.3"
dateparser = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
