[tool.poetry]
name = "ark-db"
version = "0.14.7"
description = "Updates ark-db data"
authors = ["astral4 <88992929+astral4@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.4"
pandas = "^1.5.1"
requests = "^2.28.1"
scipy = "^1.9.3"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
html5lib = "^1.1"
selenium = "^4.5.0"
webdriver-manager = "^3.8.4"
dateparser = "^1.1.2"
pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
