[tool.poetry]
name = "ark-db"
version = "0.14.7"
description = "Updates ark-db data"
authors = ["astral4 <88992929+astral4@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.11.2"
dateparser = "^1.1.7"
html5lib = "^1.1"
lxml = "^4.9.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
pillow = "^9.4.0"
python = ">=3.11,<3.12"
requests = "^2.28.2"
scipy = "^1.10.1"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
