[tool.poetry]
name = "ark-db"
version = "0.1.0"
description = "Updates ark-db data"
authors = ["Your Name <you@example.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.23.1"
pandas = "1.4.3"
Pillow = "9.2.0"
requests = "2.28.1"
scipy = "1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
